--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ header {
 .time {
   border-bottom: 2px solid #000;
   border-radius: 10px;
-  padding: 50px;
+  padding:0 50px 50px;
   margin-top: 30px;
   display: flex;
   gap: 50px;
@@ -210,6 +210,7 @@ footer {
     /* line-height: 6rem; */
   }
   body {
+    position: relative;
     background-image: url("/Aisenem&Sanjar.jpg");
     background-size: cover;
     background-position: center center;
@@ -220,7 +221,7 @@ footer {
   }
 
   .wrapper {
-    height: 72vh;
+    height: 70vh;
     background-image: none;
   }
 
